// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown Component DropDownDivider component should render without exploding 1`] = `
<div
  class="tecma-dropDown-divider"
  data-testid="tecma-dropDown-divider"
/>
`;

exports[`DropDown Component DropDownItem component should render without exploding 1`] = `
<li
  class="tecma-dropDown-item"
  data-testid="tecma-dropDown-button"
>
  <button
    class="tecma-button fluid transparent medium"
    data-testid="tecma-button"
    type="button"
  />
</li>
`;

exports[`DropDown Component DropDownLink component should render without exploding 1`] = `
<div
  class="tecma-dropDown-divider"
  data-testid="tecma-dropDown-link"
/>
`;

exports[`DropDown Component should render without exploding 1`] = `
<div
  class="tecma-dropDown bottom-center isOpen"
  data-testid="tecma-DropDown"
>
  <ul />
</div>
`;
